test/exercises/c-ray/old/c-ray.toosmall.good
../Image.chpl:33: error: pixelType 'int(8)' isn't big enough to store 8 bits per color
