test/exercises/c-ray/old/c-ray.comptimeErrors.compopts
-M .. -spixelType=int(8)  # c-ray.toosmall.good
-M .. -spixelType=real    # c-ray.noreal.good
